// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBarUnderlined should render correctly 1`] = `
.c5 {
  fill: #545456;
  cursor: pointer;
}

.c5:hover {
  fill: #757679;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  position: relative;
}

.c3 {
  display: block;
  height: 2.7rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.25rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
  -webkit-transition: box-shadow 0.25s ease-out;
  transition: box-shadow 0.25s ease-out;
}

.c3:disabled {
  color: #545456;
  border-color: #CCC;
  background: #F8F8F8;
  cursor: not-allowed;
}

.c3:active:not(:disabled),
.c3:focus:not(:disabled) {
  box-shadow: 0 0 0 1px #10ADE4;
}

.c3::-webkit-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3::-moz-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3:-ms-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3::placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid #CCC;
  background-color: rgba(0,0,0,0);
}

.c1 > input {
  background-color: inherit;
  border-color: transparent;
}

.c1 > input:focus,
.c1 > input:active {
  box-shadow: none !important;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 40px;
}

<SearchBarUnderlined
  e2e="defaultSearchBarUnderlined"
  width="100%"
>
  <styled.div
    width="100%"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gTwQXg",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  width: ",
              [Function],
              ";
  border-bottom: 1px solid ",
              [Function],
              ";
  background-color: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gTwQXg",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        <Styled(Component)
          e2e="defaultSearchBarUnderlined.Input"
        >
          <StyledComponent
            e2e="defaultSearchBarUnderlined.Input"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-irJFYO",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  & > input {
    background-color: inherit;
    border-color: transparent;

    &:focus,
    &:active {
      box-shadow: none !important;
    }
  }
",
                  ],
                },
                "displayName": "Styled(Component)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-irJFYO",
                "target": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                },
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <ForwardRef(InputWithRef)
              className="c1"
              e2e="defaultSearchBarUnderlined.Input"
            >
              <Input
                className="c1"
                disabled={false}
                e2e="defaultSearchBarUnderlined.Input"
                forwardRef={null}
                type="text"
                width="100%"
              >
                <styled.div
                  className="c1"
                  width="100%"
                >
                  <StyledComponent
                    className="c1"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-kPMMwu",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            "
  display: flex;
  flex-direction: column;
  width: ",
                            [Function],
                            ";
  position: relative;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-kPMMwu",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    width="100%"
                  >
                    <div
                      className="c1 c2"
                      width="100%"
                    >
                      <styled.input
                        disabled={false}
                        e2e="defaultSearchBarUnderlined.Input"
                        type="text"
                        width="100%"
                      >
                        <StyledComponent
                          disabled={false}
                          e2e="defaultSearchBarUnderlined.Input"
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [
                                [Function],
                              ],
                              "componentStyle": ComponentStyle {
                                "componentId": "sc-joZmNN",
                                "isStatic": false,
                                "lastClassName": "c3",
                                "rules": Array [
                                  "
  display: block;
  height: 2.7rem;
  width: ",
                                  [Function],
                                  ";
  padding: 0 1rem;
  box-sizing: border-box;
  font-family: ",
                                  [Function],
                                  ";
  font-size: ",
                                  [Function],
                                  ";
  color: ",
                                  [Function],
                                  ";
  border-width: 1px;
  border-color: ",
                                  [Function],
                                  ";
  border-style: solid;
  border-radius: ",
                                  [Function],
                                  ";
  background-color: ",
                                  [Function],
                                  ";
  background-image: none;
  outline-width: 0;
  user-select: text;
  transition: box-shadow 0.25s ease-out;

  &:disabled {
    color: ",
                                  [Function],
                                  ";
    border-color: ",
                                  [Function],
                                  ";
    background: ",
                                  [Function],
                                  ";
    cursor: not-allowed;
  }

  &:active:not(:disabled),
  &:focus:not(:disabled) {
    box-shadow: 0 0 0 1px
      ",
                                  [Function],
                                  ";
  }

  &::placeholder {
    color: ",
                                  [Function],
                                  ";
    font-size: ",
                                  [Function],
                                  ";
  }
",
                                ],
                              },
                              "displayName": "styled.input",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "sc-joZmNN",
                              "target": "input",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          type="text"
                          width="100%"
                        >
                          <input
                            className="c3"
                            data-e2e="defaultSearchBarUnderlined.Input"
                            disabled={false}
                            type="text"
                            width="100%"
                          />
                        </StyledComponent>
                      </styled.input>
                    </div>
                  </StyledComponent>
                </styled.div>
              </Input>
            </ForwardRef(InputWithRef)>
          </StyledComponent>
        </Styled(Component)>
        <styled.div
          e2e="defaultSearchBarUnderlined.Button"
        >
          <StyledComponent
            e2e="defaultSearchBarUnderlined.Button"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-jXmkxr",
                  "isStatic": false,
                  "lastClassName": "c4",
                  "rules": Array [
                    "
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 60px;
  height: 40px;
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-jXmkxr",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c4"
              data-e2e="defaultSearchBarUnderlined.Button"
            >
              <FasSearch
                selectable={true}
                size="20px"
              >
                <Styled(SvgFasSearch)
                  height="20px"
                  selectable={1}
                  width="20px"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-hCBoUX",
                          "isStatic": false,
                          "lastClassName": "c5",
                          "rules": Array [
                            "
    ",
                            "
  fill: ",
                            [Function],
                            ";
  cursor: ",
                            [Function],
                            ";

  &:hover {
    fill: ",
                            [Function],
                            ";
  }
",
                            ";
  ",
                          ],
                        },
                        "displayName": "Styled(SvgFasSearch)",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-hCBoUX",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                        Symbol(Symbol.hasInstance): [Function],
                      }
                    }
                    forwardedRef={null}
                    height="20px"
                    selectable={1}
                    width="20px"
                  >
                    <SvgFasSearch
                      className="c5"
                      height="20px"
                      selectable={1}
                      width="20px"
                    >
                      <svg
                        className="c5"
                        height="20px"
                        selectable={1}
                        viewBox="0 0 512 512"
                        width="20px"
                      >
                        <path
                          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        />
                      </svg>
                    </SvgFasSearch>
                  </StyledComponent>
                </Styled(SvgFasSearch)>
              </FasSearch>
            </div>
          </StyledComponent>
        </styled.div>
      </div>
    </StyledComponent>
  </styled.div>
</SearchBarUnderlined>
`;

exports[`SearchBarUnderlined should render correctly with e2e 1`] = `
.c5 {
  fill: #545456;
  cursor: pointer;
}

.c5:hover {
  fill: #757679;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  position: relative;
}

.c3 {
  display: block;
  height: 2.7rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.25rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
  -webkit-transition: box-shadow 0.25s ease-out;
  transition: box-shadow 0.25s ease-out;
}

.c3:disabled {
  color: #545456;
  border-color: #CCC;
  background: #F8F8F8;
  cursor: not-allowed;
}

.c3:active:not(:disabled),
.c3:focus:not(:disabled) {
  box-shadow: 0 0 0 1px #10ADE4;
}

.c3::-webkit-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3::-moz-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3:-ms-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3::placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid #CCC;
  background-color: rgba(0,0,0,0);
}

.c1 > input {
  background-color: inherit;
  border-color: transparent;
}

.c1 > input:focus,
.c1 > input:active {
  box-shadow: none !important;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 40px;
}

<SearchBarUnderlined
  e2e={null}
  width="100%"
>
  <styled.div
    width="100%"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gTwQXg",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  width: ",
              [Function],
              ";
  border-bottom: 1px solid ",
              [Function],
              ";
  background-color: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gTwQXg",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        <Styled(Component)
          e2e=".Input"
        >
          <StyledComponent
            e2e=".Input"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-irJFYO",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  & > input {
    background-color: inherit;
    border-color: transparent;

    &:focus,
    &:active {
      box-shadow: none !important;
    }
  }
",
                  ],
                },
                "displayName": "Styled(Component)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-irJFYO",
                "target": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                },
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <ForwardRef(InputWithRef)
              className="c1"
              e2e=".Input"
            >
              <Input
                className="c1"
                disabled={false}
                e2e=".Input"
                forwardRef={null}
                type="text"
                width="100%"
              >
                <styled.div
                  className="c1"
                  width="100%"
                >
                  <StyledComponent
                    className="c1"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-kPMMwu",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            "
  display: flex;
  flex-direction: column;
  width: ",
                            [Function],
                            ";
  position: relative;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-kPMMwu",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    width="100%"
                  >
                    <div
                      className="c1 c2"
                      width="100%"
                    >
                      <styled.input
                        disabled={false}
                        e2e=".Input"
                        type="text"
                        width="100%"
                      >
                        <StyledComponent
                          disabled={false}
                          e2e=".Input"
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [
                                [Function],
                              ],
                              "componentStyle": ComponentStyle {
                                "componentId": "sc-joZmNN",
                                "isStatic": false,
                                "lastClassName": "c3",
                                "rules": Array [
                                  "
  display: block;
  height: 2.7rem;
  width: ",
                                  [Function],
                                  ";
  padding: 0 1rem;
  box-sizing: border-box;
  font-family: ",
                                  [Function],
                                  ";
  font-size: ",
                                  [Function],
                                  ";
  color: ",
                                  [Function],
                                  ";
  border-width: 1px;
  border-color: ",
                                  [Function],
                                  ";
  border-style: solid;
  border-radius: ",
                                  [Function],
                                  ";
  background-color: ",
                                  [Function],
                                  ";
  background-image: none;
  outline-width: 0;
  user-select: text;
  transition: box-shadow 0.25s ease-out;

  &:disabled {
    color: ",
                                  [Function],
                                  ";
    border-color: ",
                                  [Function],
                                  ";
    background: ",
                                  [Function],
                                  ";
    cursor: not-allowed;
  }

  &:active:not(:disabled),
  &:focus:not(:disabled) {
    box-shadow: 0 0 0 1px
      ",
                                  [Function],
                                  ";
  }

  &::placeholder {
    color: ",
                                  [Function],
                                  ";
    font-size: ",
                                  [Function],
                                  ";
  }
",
                                ],
                              },
                              "displayName": "styled.input",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "sc-joZmNN",
                              "target": "input",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          type="text"
                          width="100%"
                        >
                          <input
                            className="c3"
                            data-e2e=".Input"
                            disabled={false}
                            type="text"
                            width="100%"
                          />
                        </StyledComponent>
                      </styled.input>
                    </div>
                  </StyledComponent>
                </styled.div>
              </Input>
            </ForwardRef(InputWithRef)>
          </StyledComponent>
        </Styled(Component)>
        <styled.div
          e2e=".Button"
        >
          <StyledComponent
            e2e=".Button"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-jXmkxr",
                  "isStatic": false,
                  "lastClassName": "c4",
                  "rules": Array [
                    "
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 60px;
  height: 40px;
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-jXmkxr",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c4"
              data-e2e=".Button"
            >
              <FasSearch
                selectable={true}
                size="20px"
              >
                <Styled(SvgFasSearch)
                  height="20px"
                  selectable={1}
                  width="20px"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-hCBoUX",
                          "isStatic": false,
                          "lastClassName": "c5",
                          "rules": Array [
                            "
    ",
                            "
  fill: ",
                            [Function],
                            ";
  cursor: ",
                            [Function],
                            ";

  &:hover {
    fill: ",
                            [Function],
                            ";
  }
",
                            ";
  ",
                          ],
                        },
                        "displayName": "Styled(SvgFasSearch)",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-hCBoUX",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                        Symbol(Symbol.hasInstance): [Function],
                      }
                    }
                    forwardedRef={null}
                    height="20px"
                    selectable={1}
                    width="20px"
                  >
                    <SvgFasSearch
                      className="c5"
                      height="20px"
                      selectable={1}
                      width="20px"
                    >
                      <svg
                        className="c5"
                        height="20px"
                        selectable={1}
                        viewBox="0 0 512 512"
                        width="20px"
                      >
                        <path
                          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        />
                      </svg>
                    </SvgFasSearch>
                  </StyledComponent>
                </Styled(SvgFasSearch)>
              </FasSearch>
            </div>
          </StyledComponent>
        </styled.div>
      </div>
    </StyledComponent>
  </styled.div>
</SearchBarUnderlined>
`;

exports[`SearchBarUnderlined should render correctly with onChange 1`] = `
.c5 {
  fill: #545456;
  cursor: pointer;
}

.c5:hover {
  fill: #757679;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  position: relative;
}

.c3 {
  display: block;
  height: 2.7rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.25rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
  -webkit-transition: box-shadow 0.25s ease-out;
  transition: box-shadow 0.25s ease-out;
}

.c3:disabled {
  color: #545456;
  border-color: #CCC;
  background: #F8F8F8;
  cursor: not-allowed;
}

.c3:active:not(:disabled),
.c3:focus:not(:disabled) {
  box-shadow: 0 0 0 1px #10ADE4;
}

.c3::-webkit-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3::-moz-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3:-ms-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3::placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid #CCC;
  background-color: rgba(0,0,0,0);
}

.c1 > input {
  background-color: inherit;
  border-color: transparent;
}

.c1 > input:focus,
.c1 > input:active {
  box-shadow: none !important;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 40px;
}

<SearchBarUnderlined
  e2e="defaultSearchBarUnderlined"
  onChange={[MockFunction]}
  width="100%"
>
  <styled.div
    width="100%"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gTwQXg",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  width: ",
              [Function],
              ";
  border-bottom: 1px solid ",
              [Function],
              ";
  background-color: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gTwQXg",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        <Styled(Component)
          e2e="defaultSearchBarUnderlined.Input"
          onChange={[MockFunction]}
        >
          <StyledComponent
            e2e="defaultSearchBarUnderlined.Input"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-irJFYO",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  & > input {
    background-color: inherit;
    border-color: transparent;

    &:focus,
    &:active {
      box-shadow: none !important;
    }
  }
",
                  ],
                },
                "displayName": "Styled(Component)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-irJFYO",
                "target": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                },
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            onChange={[MockFunction]}
          >
            <ForwardRef(InputWithRef)
              className="c1"
              e2e="defaultSearchBarUnderlined.Input"
              onChange={[MockFunction]}
            >
              <Input
                className="c1"
                disabled={false}
                e2e="defaultSearchBarUnderlined.Input"
                forwardRef={null}
                onChange={[MockFunction]}
                type="text"
                width="100%"
              >
                <styled.div
                  className="c1"
                  width="100%"
                >
                  <StyledComponent
                    className="c1"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-kPMMwu",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            "
  display: flex;
  flex-direction: column;
  width: ",
                            [Function],
                            ";
  position: relative;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-kPMMwu",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    width="100%"
                  >
                    <div
                      className="c1 c2"
                      width="100%"
                    >
                      <styled.input
                        disabled={false}
                        e2e="defaultSearchBarUnderlined.Input"
                        onChange={[MockFunction]}
                        type="text"
                        width="100%"
                      >
                        <StyledComponent
                          disabled={false}
                          e2e="defaultSearchBarUnderlined.Input"
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [
                                [Function],
                              ],
                              "componentStyle": ComponentStyle {
                                "componentId": "sc-joZmNN",
                                "isStatic": false,
                                "lastClassName": "c3",
                                "rules": Array [
                                  "
  display: block;
  height: 2.7rem;
  width: ",
                                  [Function],
                                  ";
  padding: 0 1rem;
  box-sizing: border-box;
  font-family: ",
                                  [Function],
                                  ";
  font-size: ",
                                  [Function],
                                  ";
  color: ",
                                  [Function],
                                  ";
  border-width: 1px;
  border-color: ",
                                  [Function],
                                  ";
  border-style: solid;
  border-radius: ",
                                  [Function],
                                  ";
  background-color: ",
                                  [Function],
                                  ";
  background-image: none;
  outline-width: 0;
  user-select: text;
  transition: box-shadow 0.25s ease-out;

  &:disabled {
    color: ",
                                  [Function],
                                  ";
    border-color: ",
                                  [Function],
                                  ";
    background: ",
                                  [Function],
                                  ";
    cursor: not-allowed;
  }

  &:active:not(:disabled),
  &:focus:not(:disabled) {
    box-shadow: 0 0 0 1px
      ",
                                  [Function],
                                  ";
  }

  &::placeholder {
    color: ",
                                  [Function],
                                  ";
    font-size: ",
                                  [Function],
                                  ";
  }
",
                                ],
                              },
                              "displayName": "styled.input",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "sc-joZmNN",
                              "target": "input",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          onChange={[MockFunction]}
                          type="text"
                          width="100%"
                        >
                          <input
                            className="c3"
                            data-e2e="defaultSearchBarUnderlined.Input"
                            disabled={false}
                            onChange={[MockFunction]}
                            type="text"
                            width="100%"
                          />
                        </StyledComponent>
                      </styled.input>
                    </div>
                  </StyledComponent>
                </styled.div>
              </Input>
            </ForwardRef(InputWithRef)>
          </StyledComponent>
        </Styled(Component)>
        <styled.div
          e2e="defaultSearchBarUnderlined.Button"
        >
          <StyledComponent
            e2e="defaultSearchBarUnderlined.Button"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-jXmkxr",
                  "isStatic": false,
                  "lastClassName": "c4",
                  "rules": Array [
                    "
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 60px;
  height: 40px;
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-jXmkxr",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c4"
              data-e2e="defaultSearchBarUnderlined.Button"
            >
              <FasSearch
                selectable={true}
                size="20px"
              >
                <Styled(SvgFasSearch)
                  height="20px"
                  selectable={1}
                  width="20px"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-hCBoUX",
                          "isStatic": false,
                          "lastClassName": "c5",
                          "rules": Array [
                            "
    ",
                            "
  fill: ",
                            [Function],
                            ";
  cursor: ",
                            [Function],
                            ";

  &:hover {
    fill: ",
                            [Function],
                            ";
  }
",
                            ";
  ",
                          ],
                        },
                        "displayName": "Styled(SvgFasSearch)",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-hCBoUX",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                        Symbol(Symbol.hasInstance): [Function],
                      }
                    }
                    forwardedRef={null}
                    height="20px"
                    selectable={1}
                    width="20px"
                  >
                    <SvgFasSearch
                      className="c5"
                      height="20px"
                      selectable={1}
                      width="20px"
                    >
                      <svg
                        className="c5"
                        height="20px"
                        selectable={1}
                        viewBox="0 0 512 512"
                        width="20px"
                      >
                        <path
                          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        />
                      </svg>
                    </SvgFasSearch>
                  </StyledComponent>
                </Styled(SvgFasSearch)>
              </FasSearch>
            </div>
          </StyledComponent>
        </styled.div>
      </div>
    </StyledComponent>
  </styled.div>
</SearchBarUnderlined>
`;

exports[`SearchBarUnderlined should render correctly with onClick 1`] = `
.c5 {
  fill: #545456;
  cursor: pointer;
}

.c5:hover {
  fill: #757679;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  position: relative;
}

.c3 {
  display: block;
  height: 2.7rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.25rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
  -webkit-transition: box-shadow 0.25s ease-out;
  transition: box-shadow 0.25s ease-out;
}

.c3:disabled {
  color: #545456;
  border-color: #CCC;
  background: #F8F8F8;
  cursor: not-allowed;
}

.c3:active:not(:disabled),
.c3:focus:not(:disabled) {
  box-shadow: 0 0 0 1px #10ADE4;
}

.c3::-webkit-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3::-moz-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3:-ms-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3::placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid #CCC;
  background-color: rgba(0,0,0,0);
}

.c1 > input {
  background-color: inherit;
  border-color: transparent;
}

.c1 > input:focus,
.c1 > input:active {
  box-shadow: none !important;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 40px;
}

<SearchBarUnderlined
  e2e="defaultSearchBarUnderlined"
  onClick={[MockFunction]}
  width="100%"
>
  <styled.div
    width="100%"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gTwQXg",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  width: ",
              [Function],
              ";
  border-bottom: 1px solid ",
              [Function],
              ";
  background-color: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gTwQXg",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        <Styled(Component)
          e2e="defaultSearchBarUnderlined.Input"
        >
          <StyledComponent
            e2e="defaultSearchBarUnderlined.Input"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-irJFYO",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  & > input {
    background-color: inherit;
    border-color: transparent;

    &:focus,
    &:active {
      box-shadow: none !important;
    }
  }
",
                  ],
                },
                "displayName": "Styled(Component)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-irJFYO",
                "target": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                },
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <ForwardRef(InputWithRef)
              className="c1"
              e2e="defaultSearchBarUnderlined.Input"
            >
              <Input
                className="c1"
                disabled={false}
                e2e="defaultSearchBarUnderlined.Input"
                forwardRef={null}
                type="text"
                width="100%"
              >
                <styled.div
                  className="c1"
                  width="100%"
                >
                  <StyledComponent
                    className="c1"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-kPMMwu",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            "
  display: flex;
  flex-direction: column;
  width: ",
                            [Function],
                            ";
  position: relative;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-kPMMwu",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    width="100%"
                  >
                    <div
                      className="c1 c2"
                      width="100%"
                    >
                      <styled.input
                        disabled={false}
                        e2e="defaultSearchBarUnderlined.Input"
                        type="text"
                        width="100%"
                      >
                        <StyledComponent
                          disabled={false}
                          e2e="defaultSearchBarUnderlined.Input"
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [
                                [Function],
                              ],
                              "componentStyle": ComponentStyle {
                                "componentId": "sc-joZmNN",
                                "isStatic": false,
                                "lastClassName": "c3",
                                "rules": Array [
                                  "
  display: block;
  height: 2.7rem;
  width: ",
                                  [Function],
                                  ";
  padding: 0 1rem;
  box-sizing: border-box;
  font-family: ",
                                  [Function],
                                  ";
  font-size: ",
                                  [Function],
                                  ";
  color: ",
                                  [Function],
                                  ";
  border-width: 1px;
  border-color: ",
                                  [Function],
                                  ";
  border-style: solid;
  border-radius: ",
                                  [Function],
                                  ";
  background-color: ",
                                  [Function],
                                  ";
  background-image: none;
  outline-width: 0;
  user-select: text;
  transition: box-shadow 0.25s ease-out;

  &:disabled {
    color: ",
                                  [Function],
                                  ";
    border-color: ",
                                  [Function],
                                  ";
    background: ",
                                  [Function],
                                  ";
    cursor: not-allowed;
  }

  &:active:not(:disabled),
  &:focus:not(:disabled) {
    box-shadow: 0 0 0 1px
      ",
                                  [Function],
                                  ";
  }

  &::placeholder {
    color: ",
                                  [Function],
                                  ";
    font-size: ",
                                  [Function],
                                  ";
  }
",
                                ],
                              },
                              "displayName": "styled.input",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "sc-joZmNN",
                              "target": "input",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          type="text"
                          width="100%"
                        >
                          <input
                            className="c3"
                            data-e2e="defaultSearchBarUnderlined.Input"
                            disabled={false}
                            type="text"
                            width="100%"
                          />
                        </StyledComponent>
                      </styled.input>
                    </div>
                  </StyledComponent>
                </styled.div>
              </Input>
            </ForwardRef(InputWithRef)>
          </StyledComponent>
        </Styled(Component)>
        <styled.div
          e2e="defaultSearchBarUnderlined.Button"
          onClick={[MockFunction]}
        >
          <StyledComponent
            e2e="defaultSearchBarUnderlined.Button"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-jXmkxr",
                  "isStatic": false,
                  "lastClassName": "c4",
                  "rules": Array [
                    "
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 60px;
  height: 40px;
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-jXmkxr",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            onClick={[MockFunction]}
          >
            <div
              className="c4"
              data-e2e="defaultSearchBarUnderlined.Button"
              onClick={[MockFunction]}
            >
              <FasSearch
                selectable={true}
                size="20px"
              >
                <Styled(SvgFasSearch)
                  height="20px"
                  selectable={1}
                  width="20px"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-hCBoUX",
                          "isStatic": false,
                          "lastClassName": "c5",
                          "rules": Array [
                            "
    ",
                            "
  fill: ",
                            [Function],
                            ";
  cursor: ",
                            [Function],
                            ";

  &:hover {
    fill: ",
                            [Function],
                            ";
  }
",
                            ";
  ",
                          ],
                        },
                        "displayName": "Styled(SvgFasSearch)",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-hCBoUX",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                        Symbol(Symbol.hasInstance): [Function],
                      }
                    }
                    forwardedRef={null}
                    height="20px"
                    selectable={1}
                    width="20px"
                  >
                    <SvgFasSearch
                      className="c5"
                      height="20px"
                      selectable={1}
                      width="20px"
                    >
                      <svg
                        className="c5"
                        height="20px"
                        selectable={1}
                        viewBox="0 0 512 512"
                        width="20px"
                      >
                        <path
                          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        />
                      </svg>
                    </SvgFasSearch>
                  </StyledComponent>
                </Styled(SvgFasSearch)>
              </FasSearch>
            </div>
          </StyledComponent>
        </styled.div>
      </div>
    </StyledComponent>
  </styled.div>
</SearchBarUnderlined>
`;

exports[`SearchBarUnderlined should render correctly with value 1`] = `
.c5 {
  fill: #545456;
  cursor: pointer;
}

.c5:hover {
  fill: #757679;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  position: relative;
}

.c3 {
  display: block;
  height: 2.7rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.25rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
  -webkit-transition: box-shadow 0.25s ease-out;
  transition: box-shadow 0.25s ease-out;
}

.c3:disabled {
  color: #545456;
  border-color: #CCC;
  background: #F8F8F8;
  cursor: not-allowed;
}

.c3:active:not(:disabled),
.c3:focus:not(:disabled) {
  box-shadow: 0 0 0 1px #10ADE4;
}

.c3::-webkit-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3::-moz-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3:-ms-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3::placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid #CCC;
  background-color: rgba(0,0,0,0);
}

.c1 > input {
  background-color: inherit;
  border-color: transparent;
}

.c1 > input:focus,
.c1 > input:active {
  box-shadow: none !important;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 40px;
}

<SearchBarUnderlined
  e2e="defaultSearchBarUnderlined"
  onChange={[MockFunction]}
  value="My search"
  width="100%"
>
  <styled.div
    width="100%"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gTwQXg",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  width: ",
              [Function],
              ";
  border-bottom: 1px solid ",
              [Function],
              ";
  background-color: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gTwQXg",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      width="100%"
    >
      <div
        className="c0"
        width="100%"
      >
        <Styled(Component)
          e2e="defaultSearchBarUnderlined.Input"
          onChange={[MockFunction]}
          value="My search"
        >
          <StyledComponent
            e2e="defaultSearchBarUnderlined.Input"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-irJFYO",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  & > input {
    background-color: inherit;
    border-color: transparent;

    &:focus,
    &:active {
      box-shadow: none !important;
    }
  }
",
                  ],
                },
                "displayName": "Styled(Component)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-irJFYO",
                "target": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                },
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            onChange={[MockFunction]}
            value="My search"
          >
            <ForwardRef(InputWithRef)
              className="c1"
              e2e="defaultSearchBarUnderlined.Input"
              onChange={[MockFunction]}
              value="My search"
            >
              <Input
                className="c1"
                disabled={false}
                e2e="defaultSearchBarUnderlined.Input"
                forwardRef={null}
                onChange={[MockFunction]}
                type="text"
                value="My search"
                width="100%"
              >
                <styled.div
                  className="c1"
                  width="100%"
                >
                  <StyledComponent
                    className="c1"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-kPMMwu",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            "
  display: flex;
  flex-direction: column;
  width: ",
                            [Function],
                            ";
  position: relative;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-kPMMwu",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    width="100%"
                  >
                    <div
                      className="c1 c2"
                      width="100%"
                    >
                      <styled.input
                        disabled={false}
                        e2e="defaultSearchBarUnderlined.Input"
                        onChange={[MockFunction]}
                        type="text"
                        value="My search"
                        width="100%"
                      >
                        <StyledComponent
                          disabled={false}
                          e2e="defaultSearchBarUnderlined.Input"
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [
                                [Function],
                              ],
                              "componentStyle": ComponentStyle {
                                "componentId": "sc-joZmNN",
                                "isStatic": false,
                                "lastClassName": "c3",
                                "rules": Array [
                                  "
  display: block;
  height: 2.7rem;
  width: ",
                                  [Function],
                                  ";
  padding: 0 1rem;
  box-sizing: border-box;
  font-family: ",
                                  [Function],
                                  ";
  font-size: ",
                                  [Function],
                                  ";
  color: ",
                                  [Function],
                                  ";
  border-width: 1px;
  border-color: ",
                                  [Function],
                                  ";
  border-style: solid;
  border-radius: ",
                                  [Function],
                                  ";
  background-color: ",
                                  [Function],
                                  ";
  background-image: none;
  outline-width: 0;
  user-select: text;
  transition: box-shadow 0.25s ease-out;

  &:disabled {
    color: ",
                                  [Function],
                                  ";
    border-color: ",
                                  [Function],
                                  ";
    background: ",
                                  [Function],
                                  ";
    cursor: not-allowed;
  }

  &:active:not(:disabled),
  &:focus:not(:disabled) {
    box-shadow: 0 0 0 1px
      ",
                                  [Function],
                                  ";
  }

  &::placeholder {
    color: ",
                                  [Function],
                                  ";
    font-size: ",
                                  [Function],
                                  ";
  }
",
                                ],
                              },
                              "displayName": "styled.input",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "sc-joZmNN",
                              "target": "input",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          onChange={[MockFunction]}
                          type="text"
                          value="My search"
                          width="100%"
                        >
                          <input
                            className="c3"
                            data-e2e="defaultSearchBarUnderlined.Input"
                            disabled={false}
                            onChange={[MockFunction]}
                            type="text"
                            value="My search"
                            width="100%"
                          />
                        </StyledComponent>
                      </styled.input>
                    </div>
                  </StyledComponent>
                </styled.div>
              </Input>
            </ForwardRef(InputWithRef)>
          </StyledComponent>
        </Styled(Component)>
        <styled.div
          e2e="defaultSearchBarUnderlined.Button"
        >
          <StyledComponent
            e2e="defaultSearchBarUnderlined.Button"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-jXmkxr",
                  "isStatic": false,
                  "lastClassName": "c4",
                  "rules": Array [
                    "
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 60px;
  height: 40px;
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-jXmkxr",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c4"
              data-e2e="defaultSearchBarUnderlined.Button"
            >
              <FasSearch
                selectable={true}
                size="20px"
              >
                <Styled(SvgFasSearch)
                  height="20px"
                  selectable={1}
                  width="20px"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-hCBoUX",
                          "isStatic": false,
                          "lastClassName": "c5",
                          "rules": Array [
                            "
    ",
                            "
  fill: ",
                            [Function],
                            ";
  cursor: ",
                            [Function],
                            ";

  &:hover {
    fill: ",
                            [Function],
                            ";
  }
",
                            ";
  ",
                          ],
                        },
                        "displayName": "Styled(SvgFasSearch)",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-hCBoUX",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                        Symbol(Symbol.hasInstance): [Function],
                      }
                    }
                    forwardedRef={null}
                    height="20px"
                    selectable={1}
                    width="20px"
                  >
                    <SvgFasSearch
                      className="c5"
                      height="20px"
                      selectable={1}
                      width="20px"
                    >
                      <svg
                        className="c5"
                        height="20px"
                        selectable={1}
                        viewBox="0 0 512 512"
                        width="20px"
                      >
                        <path
                          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        />
                      </svg>
                    </SvgFasSearch>
                  </StyledComponent>
                </Styled(SvgFasSearch)>
              </FasSearch>
            </div>
          </StyledComponent>
        </styled.div>
      </div>
    </StyledComponent>
  </styled.div>
</SearchBarUnderlined>
`;

exports[`SearchBarUnderlined should render correctly with width 1`] = `
.c5 {
  fill: #545456;
  cursor: pointer;
}

.c5:hover {
  fill: #757679;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  position: relative;
}

.c3 {
  display: block;
  height: 2.7rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.25rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
  -webkit-transition: box-shadow 0.25s ease-out;
  transition: box-shadow 0.25s ease-out;
}

.c3:disabled {
  color: #545456;
  border-color: #CCC;
  background: #F8F8F8;
  cursor: not-allowed;
}

.c3:active:not(:disabled),
.c3:focus:not(:disabled) {
  box-shadow: 0 0 0 1px #10ADE4;
}

.c3::-webkit-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3::-moz-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3:-ms-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c3::placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 200px;
  border-bottom: 1px solid #CCC;
  background-color: rgba(0,0,0,0);
}

.c1 > input {
  background-color: inherit;
  border-color: transparent;
}

.c1 > input:focus,
.c1 > input:active {
  box-shadow: none !important;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 40px;
}

<SearchBarUnderlined
  e2e="defaultSearchBarUnderlined"
  onChange={[MockFunction]}
  value="My search"
  width="200px"
>
  <styled.div
    width="200px"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gTwQXg",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  width: ",
              [Function],
              ";
  border-bottom: 1px solid ",
              [Function],
              ";
  background-color: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gTwQXg",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      width="200px"
    >
      <div
        className="c0"
        width="200px"
      >
        <Styled(Component)
          e2e="defaultSearchBarUnderlined.Input"
          onChange={[MockFunction]}
          value="My search"
        >
          <StyledComponent
            e2e="defaultSearchBarUnderlined.Input"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-irJFYO",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  & > input {
    background-color: inherit;
    border-color: transparent;

    &:focus,
    &:active {
      box-shadow: none !important;
    }
  }
",
                  ],
                },
                "displayName": "Styled(Component)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-irJFYO",
                "target": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                },
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            onChange={[MockFunction]}
            value="My search"
          >
            <ForwardRef(InputWithRef)
              className="c1"
              e2e="defaultSearchBarUnderlined.Input"
              onChange={[MockFunction]}
              value="My search"
            >
              <Input
                className="c1"
                disabled={false}
                e2e="defaultSearchBarUnderlined.Input"
                forwardRef={null}
                onChange={[MockFunction]}
                type="text"
                value="My search"
                width="100%"
              >
                <styled.div
                  className="c1"
                  width="100%"
                >
                  <StyledComponent
                    className="c1"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-kPMMwu",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            "
  display: flex;
  flex-direction: column;
  width: ",
                            [Function],
                            ";
  position: relative;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-kPMMwu",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    width="100%"
                  >
                    <div
                      className="c1 c2"
                      width="100%"
                    >
                      <styled.input
                        disabled={false}
                        e2e="defaultSearchBarUnderlined.Input"
                        onChange={[MockFunction]}
                        type="text"
                        value="My search"
                        width="100%"
                      >
                        <StyledComponent
                          disabled={false}
                          e2e="defaultSearchBarUnderlined.Input"
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [
                                [Function],
                              ],
                              "componentStyle": ComponentStyle {
                                "componentId": "sc-joZmNN",
                                "isStatic": false,
                                "lastClassName": "c3",
                                "rules": Array [
                                  "
  display: block;
  height: 2.7rem;
  width: ",
                                  [Function],
                                  ";
  padding: 0 1rem;
  box-sizing: border-box;
  font-family: ",
                                  [Function],
                                  ";
  font-size: ",
                                  [Function],
                                  ";
  color: ",
                                  [Function],
                                  ";
  border-width: 1px;
  border-color: ",
                                  [Function],
                                  ";
  border-style: solid;
  border-radius: ",
                                  [Function],
                                  ";
  background-color: ",
                                  [Function],
                                  ";
  background-image: none;
  outline-width: 0;
  user-select: text;
  transition: box-shadow 0.25s ease-out;

  &:disabled {
    color: ",
                                  [Function],
                                  ";
    border-color: ",
                                  [Function],
                                  ";
    background: ",
                                  [Function],
                                  ";
    cursor: not-allowed;
  }

  &:active:not(:disabled),
  &:focus:not(:disabled) {
    box-shadow: 0 0 0 1px
      ",
                                  [Function],
                                  ";
  }

  &::placeholder {
    color: ",
                                  [Function],
                                  ";
    font-size: ",
                                  [Function],
                                  ";
  }
",
                                ],
                              },
                              "displayName": "styled.input",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "sc-joZmNN",
                              "target": "input",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          onChange={[MockFunction]}
                          type="text"
                          value="My search"
                          width="100%"
                        >
                          <input
                            className="c3"
                            data-e2e="defaultSearchBarUnderlined.Input"
                            disabled={false}
                            onChange={[MockFunction]}
                            type="text"
                            value="My search"
                            width="100%"
                          />
                        </StyledComponent>
                      </styled.input>
                    </div>
                  </StyledComponent>
                </styled.div>
              </Input>
            </ForwardRef(InputWithRef)>
          </StyledComponent>
        </Styled(Component)>
        <styled.div
          e2e="defaultSearchBarUnderlined.Button"
        >
          <StyledComponent
            e2e="defaultSearchBarUnderlined.Button"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-jXmkxr",
                  "isStatic": false,
                  "lastClassName": "c4",
                  "rules": Array [
                    "
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 60px;
  height: 40px;
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-jXmkxr",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c4"
              data-e2e="defaultSearchBarUnderlined.Button"
            >
              <FasSearch
                selectable={true}
                size="20px"
              >
                <Styled(SvgFasSearch)
                  height="20px"
                  selectable={1}
                  width="20px"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-hCBoUX",
                          "isStatic": false,
                          "lastClassName": "c5",
                          "rules": Array [
                            "
    ",
                            "
  fill: ",
                            [Function],
                            ";
  cursor: ",
                            [Function],
                            ";

  &:hover {
    fill: ",
                            [Function],
                            ";
  }
",
                            ";
  ",
                          ],
                        },
                        "displayName": "Styled(SvgFasSearch)",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-hCBoUX",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                        Symbol(Symbol.hasInstance): [Function],
                      }
                    }
                    forwardedRef={null}
                    height="20px"
                    selectable={1}
                    width="20px"
                  >
                    <SvgFasSearch
                      className="c5"
                      height="20px"
                      selectable={1}
                      width="20px"
                    >
                      <svg
                        className="c5"
                        height="20px"
                        selectable={1}
                        viewBox="0 0 512 512"
                        width="20px"
                      >
                        <path
                          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        />
                      </svg>
                    </SvgFasSearch>
                  </StyledComponent>
                </Styled(SvgFasSearch)>
              </FasSearch>
            </div>
          </StyledComponent>
        </styled.div>
      </div>
    </StyledComponent>
  </styled.div>
</SearchBarUnderlined>
`;
